operator/gitops/argocd/pipeline-service/tekton-results/base/api-s3-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  namespace: tekton-pipelines
spec:
  template:
    spec:
      containers:
        - name: api
