operator/gitops/argocd/pipeline-service/tekton-results/base/api-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "1"
