operator/gitops/argocd/pipeline-service/tekton-results/base/db-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-database
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: v0.4.0
  name: tekton-results-database
  namespace: tekton-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-database
      app.kubernetes.io/part-of: tekton-results
      app.kubernetes.io/version: v0.4.0
  serviceName: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tekton-results-database
        app.kubernetes.io/part-of: tekton-results
        app.kubernetes.io/version: v0.4.0
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: tekton-results-database
            - secretRef:
                name: tekton-results-database
          image: postgres:13.3
          name: postgres
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5432
              name: postgredb
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
            - mountPath: /docker-entrypoint-initdb.d
              name: sql-initdb
      volumes:
        - configMap:
            name: tekton-results-sql-initdb-config
          name: sql-initdb
  volumeClaimTemplates:
    - metadata:
        labels:
          app.kubernetes.io/part-of: tekton-results
          app.kubernetes.io/version: v0.4.0
        name: postgredb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
