operator/gitops/argocd/pipeline-service/tekton-results/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-api
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: v0.4.0
  name: tekton-results-api
  namespace: tekton-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-api
      app.kubernetes.io/part-of: tekton-results
      app.kubernetes.io/version: v0.4.0
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/name: tekton-results-api
        app.kubernetes.io/part-of: tekton-results
        app.kubernetes.io/version: v0.4.0
    spec:
      containers:
        - env:
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: db.user
                  name: tekton-results-database
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db.password
                  name: tekton-results-database
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: db.host
                  name: tekton-results-database
            - name: DB_NAME
              valueFrom:
                secretKeyRef:
                  key: db.name
                  name: tekton-results-database
            - name: DB_PROTOCOL
              value: tcp
          image: tekton-results-api
          name: api
          volumeMounts:
            - mountPath: /etc/tls
              name: tls
              readOnly: true
            - name: config
              mountPath: /env
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
      serviceAccountName: tekton-results-api
      volumes:
        - name: tls
          secret:
            secretName: tekton-results-tls
        - name: config
          configMap:
            name: tekton-results-config
            defaultMode: 420
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-watcher
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: v0.4.0
  name: tekton-results-watcher
  namespace: tekton-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-watcher
      app.kubernetes.io/part-of: tekton-results
      app.kubernetes.io/version: v0.4.0
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/name: tekton-results-watcher
        app.kubernetes.io/part-of: tekton-results
        app.kubernetes.io/version: v0.4.0
    spec:
      containers:
        - args:
            - -api_addr
            - tekton-results-api-service.tekton-results.svc.cluster.local:50051
            - -auth_mode
            - token
          image: tekton-results-watcher
          name: watcher
          volumeMounts:
            - mountPath: /etc/tls
              name: tls
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
      serviceAccountName: tekton-results-watcher
      volumes:
        - name: tls
          secret:
            secretName: tekton-results-tls
