operator/gitops/argocd/pipeline-service/tekton-results/base/watcher-config.yaml
# Adjusting args to tekton-results namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  namespace: tekton-pipelines
spec:
  template:
    spec:
      containers:
        - name: watcher
          args:
            [
              "-api_addr",
              "tekton-results-api-service.tekton-results.svc.cluster.local:50051",
              "-auth_mode",
              "token",
            ]
