operator/gitops/argocd/pipeline-service/tekton-results/base/api-service-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: tekton-pipelines
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: tekton-results-tls
