operator/gitops/argocd/pipeline-service/tekton-results/base/argocd-sync-wave.yaml
# Adding ArgoCd sync wave
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "2"
