operator/gitops/argocd/pipeline-service/tekton-results/base/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-database
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: v0.4.0
  name: tekton-results-database-service
  namespace: tekton-results
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app.kubernetes.io/name: tekton-results-database
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: v0.4.0
  type: NodePort
