operator/gitops/argocd/pipeline-service/tekton-results/base/api-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-results
  namespace: tekton-results
  labels:
    app.kubernetes.io/part-of: tekton-results
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/hsts_header: "max-age=63072000"
spec:
  to:
    kind: Service
    name: tekton-results-api-service
    weight: 100
  port:
    # only use REST endpoints for external access
    targetPort: rest
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
