operator/gitops/argocd/pipeline-service/tekton-results/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-results
  namespace: tekton-results
  labels:
    app.kubernetes.io/part-of: tekton-results
  annotations:
    openshift.io/host.generated: "true"
spec:
  to:
    kind: Service
    name: tekton-results-api-service
    weight: 100
  port:
    targetPort: grpc
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
